feat: add request and response dto