@@ -1,49 +1,66 @@
 package org.sikawofie.projecttracker.exception;
 
-import org.springframework.http.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 
-import java.util.*;
+import jakarta.validation.ConstraintViolationException;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
+    private static final Logger logger = LoggerFactory.getLogger(GlobalExceptionHandler.class);
+
     @ExceptionHandler(ResourceNotFoundException.class)
     public ResponseEntity<ErrorResponse> handleNotFound(ResourceNotFoundException ex) {
-        return new ResponseEntity<>(
-                new ErrorResponse("NOT_FOUND", ex.getMessage()),
-                HttpStatus.NOT_FOUND
-        );
+        logger.warn("Resource not found", ex);
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(new ErrorResponse("NOT_FOUND", ex.getMessage()));
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ErrorResponse> handleValidation(MethodArgumentNotValidException ex) {
-        List<String> details = ex.getBindingResult().getFieldErrors().stream()
+        logger.warn("Validation failed", ex);
+        List<String> details = ex.getBindingResult()
+                .getFieldErrors()
+                .stream()
                 .map(err -> err.getField() + ": " + err.getDefaultMessage())
-                .toList();
+                .collect(Collectors.toList());
 
-        return new ResponseEntity<>(
-                new ErrorResponse("VALIDATION_ERROR", "Validation failed", details),
-                HttpStatus.BAD_REQUEST
-        );
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .body(new ErrorResponse("VALIDATION_ERROR", "Validation failed", details));
+    }
+
+    @ExceptionHandler(ConstraintViolationException.class)
+    public ResponseEntity<ErrorResponse> handleConstraintViolation(ConstraintViolationException ex) {
+        logger.warn("Constraint violation", ex);
+        List<String> errors = ex.getConstraintViolations()
+                .stream()
+                .map(v -> v.getPropertyPath() + ": " + v.getMessage())
+                .collect(Collectors.toList());
+
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .body(new ErrorResponse("CONSTRAINT_VIOLATION", "Validation failed", errors));
     }
 
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
     public ResponseEntity<ErrorResponse> handleTypeMismatch(MethodArgumentTypeMismatchException ex) {
+        logger.warn("Type mismatch error", ex);
         String detail = "Invalid value for parameter '" + ex.getName() + "': " + ex.getValue();
-        return new ResponseEntity<>(
-                new ErrorResponse("TYPE_MISMATCH", detail),
-                HttpStatus.BAD_REQUEST
-        );
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .body(new ErrorResponse("TYPE_MISMATCH", detail));
     }
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ErrorResponse> handleOtherExceptions(Exception ex) {
-        return new ResponseEntity<>(
-                new ErrorResponse("INTERNAL_ERROR", ex.getMessage()),
-                HttpStatus.INTERNAL_SERVER_ERROR
-        );
+        logger.error("Unhandled exception", ex);
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(new ErrorResponse("INTERNAL_ERROR", "An unexpected error occurred."));
     }
 }
